Package.json y css

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "6.9.0"
   },
   "scripts": {
-    "start": "meteor run && npm install",
+    "start": "meteor run",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
